--- a/labo4/Makefile
+++ b/labo4/Makefile
@@ -10,3 +10,9 @@ minColoring:	minColoring.pl
 
 gangsters: gangsters.pl
 		swipl -q -O -g main --stand_alone=true -o gangsters -c gangsters.pl
+
+banner: banner.pl
+		swipl -q -O -g main --stand_alone=true -o banner -c banner.pl
+
+banner_github: banner_github.pl
+		swipl -q -O -g main --stand_alone=true -o banner_github -c banner_github.pl
